# vllm-autoresearch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  program.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DOCUMENTATION_INDEX.md  FAQ.md  TROUBLESHOOTING.md
examples/: optimize_qwen.py
vllm_autopilot/: __init__.py  agent.py  benchmark_template.py  cli.py  database.py  hardware.py  orchestrator.py  safety.py
